Stopped footer going off screen
width: 100% cause footer to go off the page

--- a/userside/CSS/footer.css
+++ b/userside/CSS/footer.css
@@ -4,7 +4,6 @@
     background-color:  rgb(152, 82, 150);
     color: white;
     padding: 20px;
-    width: 100%;
 }
 .social_icons {
     list-style-type: none;
